viewの追加により一覧画面(list)が表示サれるように変更

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,6 +10,18 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
+      <header>
+          <p>
+            ここはヘッダーです。
+          </p>
+      </header>
+      <main>
         @content
+      </main>
+      <footer>
+        <p>
+          ここはフッターです。
+        </p>
+      </footer>
     </body>
 </html>
