--- a/app/views/edit.scala.html
+++ b/app/views/edit.scala.html
@@ -1,1 +1,21 @@
-<!-- 編集・削除用の画面 -->
+@(msg: String, form1: Form[models.Message])
+@main("Sample Page") {
+
+  <h1>Update Data</h1>
+  <p>@msg</p>
+  @helper.form(action = routes.Application.update){
+    <input type="hidden" value="@form1("id").value" name="id" />
+    
+    @(helper.inputText (
+      field = form1("name")
+    ))
+    @(helper.inputText (
+      field = form1("mail")
+    ))
+    @(helper.textarea (
+      field = form1("message")
+    ))
+
+  <input type="submit">
+  }
+}
