暫定的に完成

--- a/app/views/add.scala.html
+++ b/app/views/add.scala.html
@@ -1,19 +1,19 @@
-@(msg: String, form1: Form[models.Message])
+@(msg: String, form1: Form[models.Tasks])
 @main("Sample Page") {
 
   <h1>Hello!</h1>
   <p>@msg</p>
   @helper.form(action = routes.Application.create){
   @(helper.inputText (
-    field = form1("name")
+    field = form1("task_name")
   ))
   @(helper.inputText (
-    field = form1("mail")
+    field = form1("status")
   ))
-  @(helper.textarea (
-    field = form1("message")
-  ))
-
   <input type="submit">
   }
+  @helper.form(action = routes.Application.index){
+  <input type="submit" value="TOP">
+  }
+
 }
