--- a/app/views/delete.scala.html
+++ b/app/views/delete.scala.html
@@ -1,4 +1,4 @@
-@(msg: String, form1: Form[models.Message])
+@(msg: String, form1: Form[models.Tasks])
 @main("Sample Page") {
 
   <h1>delete data</h1>
@@ -9,9 +9,13 @@
     field = form1("id")
   ))
 
-  <input type="hidden" value="dummy" name="name" />
-  <input type="hidden" value="dummy" name="message" />
+  <input type="hidden" value="dummy" name="task_name" />
+  <input type="hidden" value="dummy" name="status" />
 
   <input type="submit">
   }
+  @helper.form(action = routes.Application.index){
+  <input type="submit" value="TOP">
+  }
+
 }
